--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
         <div class="row">
             <div class="col-md-6">
-                <img src="/index_files/about.jpg" alt="" class="img-responsive img-rounded">
+                <img src="/index_files/scoutslab-900-602.png" alt="" class="img-responsive img-rounded">
             </div>
 
             <div class="col-md-6">
